@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- CGUITreeView now shows expand icon (+/-) for sub-nodes with correct text-color
 - Bugfix: CGUITreeView now aligns scrollbars correct so they work on resize
 - obj/mtl loader no longer messes up bump textures when the name starts with a number
 - CImageLoaderBMP now supports loading 1-bit images with palette data
